--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-pydantic==2.5.0
+pydantic==2.4.2
 requests==2.31.0
 python-multipart==0.0.6
 aiofiles==23.2.1
 beautifulsoup4==4.12.2
-lxml==4.9.3 
+html5lib==1.1 
