--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: wayfair-mcp-server
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python wayfair_render_optimized.py
+    buildCommand: pip install -r requirements_render_fixed.txt
+    startCommand: python wayfair_render_fixed.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
