--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: wayfair-mcp-server
     env: python
-    buildCommand: pip install -r requirements_render_fixed.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: python wayfair_render_fixed.py
     envVars:
       - key: PYTHON_VERSION
