--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: wayfair-mcp-server
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python wayfair_simple.py
+    startCommand: python app.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
