--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.88.0
+flask==2.3.3
+flask-cors==4.0.0
 uvicorn==0.24.0
-pydantic==1.10.13
 requests==2.31.0
 python-multipart==0.0.6
 aiofiles==23.2.1
